# Flutter-FFI-Demo

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle  example.h
android/app/calc_example/: example.cpp
android/app/src/profile/: AndroidManifest.xml
android/app/struct_example/: struct_example.cpp  struct_example.h
ios/Runner/: Info.plist
lib/: example_gen.dart  main.dart  structs.dart  structs_gen.dart
lib/calculator/: c_calculator.dart  dart_calculator.dart
test/: widget_test.dart
